# cpp.demo.nanomsg

./: CMakeLists.txt  README.md  client.c  libnanomsg_static.cmake  server.c  static_build.sh  test_nanomsg.go
test_pair/: CMakeLists.txt  client.c  server.c
test_pubsub/: CMakeLists.txt  puber.c  suber.c
test_reqrep/: CMakeLists.txt  rep.c  req.c
test_survey/: CMakeLists.txt  respondent.c  surveyor.c
